# advanced-agentic-ai-systems

./: .env.template  .gitignore  README.md  main.py  pyproject.toml
code_samples/: Introduction to Agentic AI.md  README.md
code_samples/deployment/01_observability/: .env.example  README.md  evaluation_dataset.py  example_usage.py  monitored_agent.py  observability_setup.py  performance_monitor.py  requirements.txt
code_samples/deployment/02_production_api/: .env.example  Dockerfile  README.md  deploy.sh  docker-compose.yml  main.py  requirements.txt  test_api.py
code_samples/foundations/01_basic_react_agent/: README.md  debug_utils.py  react_agent.py  requirements.txt  test_agent.py
code_samples/foundations/02_tool_integration/: README.md  custom_tools.py  monitoring.py  performance_utils.py  requirements.txt  research_agent.py  security_utils.py  tool_setup.py
code_samples/foundations/03_memory_systems/: README.md  long_term_memory.py  main.py  memory_enhanced_agent.py  requirements.txt  short_term_memory.py  test_memory_system.py
code_samples/multi_agent/01_specialized_agents/: .env.example  .gitignore  README.md  analyst_agent.py  config.py  main.py  orchestrator.py  requirements.txt  researcher_agent.py  writer_agent.py
code_samples/multi_agent/02_orchestration/: .env.example  README.md  enhanced_supervisor.py  orchestration_example.py  quick_test.py  requirements.txt  specialized_agents.py  supervisor_agent.py  test_orchestration.py
code_samples/multi_agent/03_performance_optimization/: .env.example  README.md  agent_factory.py  (+14 more)
config/: settings.py
docs/: introduction.md  performance-metrics.md  production-setup.md  troubleshooting.md
requirements/: base.txt  dev.txt  prod.txt
scripts/: health_check.py  setup_project.py  test_core_components.py  verify_phase2.py
(+35 files in other folders)
