[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-agentic-ai-systems"
version = "0.1.0"
description = "Production-ready multi-agent AI system"
authors = [{name = "Jialun He", email = "you@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "langchain-community>=0.0.10",
    "langsmith>=0.0.70",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "redis>=5.0.1",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.2",
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
    "rank-bm25>=0.2.2",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipywidgets>=8.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0"
]
prod = [
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.38.0",
    "gunicorn>=21.2.0",
    "psutil>=5.9.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
agentic-api = "agentic_ai.api.main:run_server"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"